Many changes, added teaching page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 		    <div class="col-lg-8">
 			<p>
 			    C201 Wells Hall, Red Cedar Rd.
-			    East Lansing, MI 48823
+			    East Lansing, MI 48823, USA
 			</p>
 		    </div><!-- /col-lg-6 -->
 
