--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,9 +12,9 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/index.html">Home</a></li>
-            <li><a href="/research.html">About</a></li>
-            <li><a href="/software.html">Software</a></li>
-            <li><a href="/teaching.html">Teaching</a></li>
+            <li><a href="/research/">Research</a></li>
+            <li><a href="/software/">Software</a></li>
+            <li><a href="/teaching/">Teaching</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
