--- a/css/main.css
+++ b/css/main.css
@@ -7,12 +7,14 @@
  * URL: http://blacktie.co
  */
 
-@import url(http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy);
+@import url(http://fonts.googleapis.com/css?family=Cardo:400,700|Merriweather+Sans:400,800);
+/* @import url(http://fonts.googleapis.com/css?family=Cardo); */
+/* @import url(http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy);   */
 /* @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700); */
 
 body {
     background-color: #ffffff;
-    font-family: 'Sorts Mill Goudy', serif;
+    font-family: 'Cardo', serif;
     /* font-family: 'Montserrat', sans-serif; */
     font-weight: 400;
     font-size: 14px;
@@ -24,7 +26,7 @@ body {
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Sorts Mill Goudy', serif;
+    font-family: 'Cardo', serif;
     /* font-family: 'Montserrat', sans-serif; */
     font-weight: 700;
     color: #333;
@@ -88,7 +90,7 @@ hr {
 
 
 .navbar {
-    font-family: Impact, Charcoal, sans-serif;
+    font-family: 'Merriweather Sans', sans-serif;
     text-transform: uppercase;
     margin-bottom: 0px;
 }
@@ -109,13 +111,13 @@ hr {
 }
 
 .navbar-inverse .navbar-nav > li > a:hover {
-    color: #222222;
+    color: #000000;
 }
 
 .navbar-brand {
     font-weight: 800;
     font-size: 28px;
-    letter-spacing: 2px;
+    /* letter-spacing: 2px; */
 }
 
 .navbar-inverse .navbar-brand {
@@ -154,10 +156,11 @@ hr {
 
 
 #footer {
-    font-family: Impact, Charcoal, sans-serif;
+    font-family: 'Merriweather Sans', sans-serif;
     background-color: #2f2f2f;
     padding-top: 20px;
     padding-bottom: 60px; 
+    font-weight: 400;
 }
 
 #footer p {
