Added homework information, fixed the office number in Syllabus

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 
 		    <div class="col-lg-4">
 			<p>
-			    <a href="#">Email me</a><br/>
+			    <a href="mailto:chentia1@msu.edu">Email me</a><br/>
 			</p>
 		    </div><!-- /col-lg-6 -->
 		</div>
