--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,16 @@ h1 {
 }
 
 
+table {
+    margine: 10px;
+}
+
+th, td {
+    padding-left: 6px;
+    padding-right: 6px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+}
 
 /* Paragraph & Typographic */
 p {
