--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,11 @@ h1 {
     margin-bottom: 30px;
 }
 
+h2 {
+    font-size: 26px;
+    margin-top: 25px;
+    margin-bottom: 15px;
+}
 
 table {
     margine: 10px;
@@ -53,8 +58,20 @@ th, td {
 /* Paragraph & Typographic */
 p {
     line-height: 28px;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
     font-size: 16px;
+}
+
+/*
+ul {
+    padding: 0px;
+    margin: 10px;
+}
+*/
+
+ul li {
+    padding: 2px; 
+    font-size: 15px;
 }
 
 .centered {
