--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,14 +4,15 @@
 		<div class="row">
 		    <div class="col-lg-8">
 			<p>
-			    C237 Wells Hall, Red Cedar Rd.
-			    East Lansing, MI 48823, USA
+			    310A Goodwyn Hall
+			    Auburn University at Montgomery
+			    Montgomery Alabama
 			</p>
 		    </div><!-- /col-lg-6 -->
 
 		    <div class="col-lg-4">
 			<p>
-			    <a href="mailto:chentia1@msu.edu">Email me</a><br/>
+			    <a href="mailto:tchen1@aum.edu">Email me</a><br/>
 			</p>
 		    </div><!-- /col-lg-6 -->
 		</div>
