Address in 3 lines

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,12 @@
 		    <div class="col-lg-8">
 			<p>
 			    310A Goodwyn Hall
+			</p>
+			<p>
 			    Auburn University at Montgomery
-			    Montgomery Alabama
+			</p>
+			<p>
+			    Montgomery Alabama USA
 			</p>
 		    </div><!-- /col-lg-6 -->
 
