Use line breaks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,12 +4,8 @@
 		<div class="row">
 		    <div class="col-lg-8">
 			<p>
-			    310A Goodwyn Hall
-			</p>
-			<p>
-			    Auburn University at Montgomery
-			</p>
-			<p>
+			    310A Goodwyn Hall<br>
+			    Auburn University at Montgomery<br>
 			    Montgomery Alabama USA
 			</p>
 		    </div><!-- /col-lg-6 -->
