Use Ubuntu + Oswald fonts
use new fonts

--- a/css/main.css
+++ b/css/main.css
@@ -7,16 +7,17 @@
  * URL: http://blacktie.co
  */
 
-@import url(http://fonts.googleapis.com/css?family=Cardo:400,700|Merriweather+Sans:400,800);
+@import url('https://fonts.googleapis.com/css?family=Oswald:700|Ubuntu:300&subset=greek,greek-ext,latin-ext');
+/* @import url(http://fonts.googleapis.com/css?family=Cardo:400,700|Merriweather+Sans:400,800); */
 /* @import url(http://fonts.googleapis.com/css?family=Cardo); */
 /* @import url(http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy);   */
 /* @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700); */
 
 body {
     background-color: #ffffff;
-    font-family: 'Cardo', serif;
+    font-family: 'Ubuntu', sans-serif;
     /* font-family: 'Montserrat', sans-serif; */
-    font-weight: 400;
+    font-weight: 300;
     font-size: 14px;
     color: #555;
 
@@ -26,7 +27,7 @@ body {
 
 /* Titles */
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Cardo', serif;
+    font-family: 'Oswald', sans-serif;
     /* font-family: 'Montserrat', sans-serif; */
     font-weight: 700;
     color: #333;
