--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ hr {
 
 
 .navbar {
-    font-family: 'Merriweather Sans', sans-serif;
+    font-family: 'Oswald', sans-serif;
     text-transform: uppercase;
     margin-bottom: 0px;
 }
@@ -134,7 +134,7 @@ hr {
 }
 
 .navbar-inverse .navbar-nav > li > a {
-    font-weight: 800;
+    font-weight: 700;
     color: white;
 }
 
@@ -143,7 +143,7 @@ hr {
 }
 
 .navbar-brand {
-    font-weight: 800;
+    font-weight: 700;
     font-size: 28px;
     /* letter-spacing: 2px; */
 }
@@ -184,11 +184,11 @@ hr {
 
 
 #footer {
-    font-family: 'Merriweather Sans', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     background-color: #2f2f2f;
     padding-top: 20px;
     padding-bottom: 60px; 
-    font-weight: 400;
+    font-weight: 300;
 }
 
 #footer p {
