--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ ul {
 */
 
 ul li {
-    padding: 2px; 
+    padding: 2px;
     font-size: 15px;
 }
 
@@ -187,7 +187,7 @@ hr {
     font-family: 'Ubuntu', sans-serif;
     background-color: #2f2f2f;
     padding-top: 20px;
-    padding-bottom: 60px; 
+    padding-bottom: 60px;
     font-weight: 300;
 }
 
@@ -247,12 +247,17 @@ bt {
 	font-size: 12px;
 }
 
+#sketch-holder {
+    /* width: 50%; */
+    margin: 0 auto;
+}
+
 /* ================== PORTFOLIO IMAGES HOVER EFFECT ================== */
 /* Effects also are controled by hover.zoom.js */
-.zoom { 
-    display:block; 
-    position:relative; 
-    overflow:hidden; 
+.zoom {
+    display:block;
+    position:relative;
+    overflow:hidden;
     background:transparent url(../img/loader.gif) no-repeat center;
 }
 
