--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html>
-
-  {% include head.html %}
+    <head>
+        {% include head.html %}
+    </head>
 
     <body>
 
        {% include header.html %}
 
-	<div id="ww">
-	<div class="container">
-	    <div class="row">
-		<div class="col-lg-8 col-lg-offset-2">
+		<div id="ww">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-8 col-lg-offset-2">
 
-		    <!-- img src="assets/img/user.png" alt="Tianran Chen" -->
-		    {{ content }}
+						{{ content }}
 
-		</div><!-- /col-lg-8 -->
-	    </div><!-- /row -->
-	</div> <!-- /container -->
-	</div>
+					</div><!-- /col-lg-8 -->
+				</div><!-- /row -->
+			</div> <!-- /container -->
+		</div>
 
-	{% include footer.html %}
+		{% include footer.html %}
 
     </body>
 </html>
