--- a/css/reveal-serif.css
+++ b/css/reveal-serif.css
@@ -35,6 +35,25 @@ body {
   line-height: 1.3;
   font-weight: inherit; }
 
+.theorem {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    background: #E0E0E0;
+    transition: 0.3s;
+    text-align: left;
+    margin: 15px 2px;
+}
+
+/* Add some padding inside the card container */
+.theorem h2,
+.theorem h3,
+.theorem h4,
+.theorem h5,
+.theorem h6,
+.theorem p {
+    padding: 4px 16px;
+}
+
 /*********************************************
  * HEADERS
  *********************************************/
@@ -55,13 +74,13 @@ body {
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 3.77em; }
+  font-size: 2.50em; }
 
 .reveal h2 {
-  font-size: 2.11em; }
+  font-size: 2.00em; }
 
 .reveal h3 {
-  font-size: 1.55em; }
+  font-size: 1.50em; }
 
 .reveal h4 {
   font-size: 1em; }
