--- a/_layouts/slide.html
+++ b/_layouts/slide.html
@@ -27,6 +27,7 @@
 		<script src="/js/reveal.js"></script>
 		<script>
 			Reveal.initialize({
+                margin: 0.05,
                 history: true,
                 transition: 'slide',
                 transitionSpeed: 'fast'
