Modified AMS Fall SE talk

--- a/_layouts/slide.html
+++ b/_layouts/slide.html
@@ -29,6 +29,7 @@
 			Reveal.initialize({
                 margin: 0.05,
                 history: true,
+                progress: false,
                 transition: 'slide',
                 transitionSpeed: 'fast'
             });
