--- a/css/reveal-serif.css
+++ b/css/reveal-serif.css
@@ -341,3 +341,65 @@ h2.title {
 .col4 { width: 33.3%; }
 .col3 { width: 25.0%; }
 .col2 { width: 16.6%; }
+
+.shape1 {
+  fill: #FC7343;
+  stroke: white;
+  stroke-width: 3px;
+  stroke-linejoin: round;
+}
+
+.shape2 {
+  fill: #ba95eb;
+  stroke: white;
+  stroke-width: 3px;
+  stroke-linejoin: round;
+}
+
+.shape3 {
+  fill: #367F84;
+  stroke: #367F84;
+  stroke-width: 5px;
+  stroke-linejoin: round;
+}
+
+.shape4 {
+  fill: none;
+  stroke: white;
+  stroke-width: 3px;
+  stroke-linejoin: round;
+}
+
+.slider {
+-webkit-appearance: none;
+width: 80%;
+height: 15px;
+border-radius: 5px;   
+background: #d3d3d3;
+outline: none;
+opacity: 0.7;
+-webkit-transition: .2s;
+transition: opacity .2s;
+}
+
+.slider:hover {
+opacity: 1; /* Fully shown on mouse-over */
+}
+
+.slider::-webkit-slider-thumb {
+-webkit-appearance: none;
+appearance: none;
+width: 25px;
+height: 25px;
+border-radius: 50%; 
+background: #367F84;
+cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+width: 25px;
+height: 25px;
+border-radius: 50%;
+background: #367F84;
+cursor: pointer;
+}
