--- a/css/reveal-serif.css
+++ b/css/reveal-serif.css
@@ -61,7 +61,7 @@ body {
     color: white;
     transition: 0.3s;
     text-align: center;
-    margin: 19px 19px 30px 30px;
+    margin: 16px 16px 20px 20px;
     border-radius: 25px;
 }
 
@@ -101,10 +101,10 @@ body {
   font-size: 2.50em; }
 
 .reveal h2 {
-  font-size: 2.00em; }
+  font-size: 1.80em; }
 
 .reveal h3 {
-  font-size: 1.50em; }
+  font-size: 1.40em; }
 
 .reveal h4 {
   font-size: 1em; }
@@ -114,7 +114,7 @@ body {
 
 h2.title {
   color: white;
-  text-shadow: 2px 2px #383D3D;
+  text-shadow: 2px 2px 8px #383D3D;
 }
 /*********************************************
  * OTHER
@@ -235,6 +235,10 @@ h2.title {
 .reveal table tbody tr:last-child td {
   border-bottom: none; }
 
+.reveal table.booktab tbody tr th,
+.reveal table.booktab tbody tr td {
+  border-bottom: 1px solid #aaa; }
+
 .reveal sup {
   vertical-align: super;
   font-size: smaller; }
@@ -278,7 +282,7 @@ h2.title {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
   border: 4px solid #000;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.35); }
 
 .reveal section img.plain {
   border: 0;
@@ -336,6 +340,7 @@ h2.title {
   display: flex;
 }
 
+.col8 { width: 66.6%; }
 .col6 { width: 50.0%; }
 .col5 { width: 41.6%; }
 .col4 { width: 33.3%; }
