--- a/_layouts/slide.html
+++ b/_layouts/slide.html
@@ -28,6 +28,8 @@
 		<script>
 			Reveal.initialize({
                 margin: 0.05,
+                controls: false,
+                keyboard: true,
                 history: true,
                 progress: false,
                 transition: 'slide',
