--- a/research/kuramoto/kap/app.css
+++ b/research/kuramoto/kap/app.css
@@ -1,3 +1,9 @@
+#parent {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-gap: 50px;
+}
+
 svg {
   background-color: #FFF;
   cursor: default;
@@ -6,6 +12,11 @@ svg {
   -ms-user-select: none;
   -o-user-select: none;
   user-select: none;
+  box-shadow: 10px 10px 5px grey;
+  /* border-width: 1px; */
+  border-radius: 5px;
+  /* border-color:#000; */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 svg:not(.active):not(.ctrl) {
