--- a/research/kuramoto/kap/app.css
+++ b/research/kuramoto/kap/app.css
@@ -1,8 +1,8 @@
-#parent {
+/* #parent {
   display: grid;
   grid-template-columns: 1fr 4fr;
   grid-gap: 50px;
-}
+} */
 
 svg {
   background-color: #FFF;
