--- a/css/reveal-v4-chen.css
+++ b/css/reveal-v4-chen.css
@@ -39,8 +39,11 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   --selection-color: #fff; }
 
 .reveal-viewport {
-  background: #F0F1EB;
-  background-color: #F0F1EB; }
+  /* background: #F0F1EB;
+  background-color: #F0F1EB;  */
+  background: #FFFFFF;
+  background-color: #FFFFFF; 
+}
 
 .reveal {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, FreeSerif, serif;
