--- a/_layouts/lecture.html
+++ b/_layouts/lecture.html
@@ -12,6 +12,7 @@
 		</div>
 		<script src="/js/reveal-v4.js"></script>
         <script src="/js/reveal-v4/math/math.js"></script>
+        <!-- <script src="/js/reveal-v4/notes/notes.js"></script> -->
         <script src="/js/reveal-v4/audio-slideshow/plugin.js"></script>
         <script>
             Reveal.initialize({
@@ -35,13 +36,13 @@
                     textToSpeechURL: null,  // the URL to the text to speech converter
                     defaultNotes: false, 	// use slide notes as default for the text to speech converter
                     defaultText: false, 	// use slide text as default for the text to speech converter
-                    advance: 300, 		// advance to next slide after given time in milliseconds after audio has played, use negative value to not advance
+                    advance: 0, 		// advance to next slide after given time in milliseconds after audio has played, use negative value to not advance
                     autoplay: true,	// automatically start slideshow
-                    defaultDuration: 5,	// default duration in seconds if no audio is available
+                    defaultDuration: 2,	// default duration in seconds if no audio is available
                     defaultAudios: false,	// try to play audios with names such as audio/1.2.ogg
                     playerOpacity: 0.50,	// opacity value of audio player if unfocused
                     playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', // style used for container of audio controls
-                    startAtFragment: false, // when moving to a slide, start at the current fragment or at the start of the slide
+                    startAtFragment: true, // when moving to a slide, start at the current fragment or at the start of the slide
                 },
                 plugins: [ RevealMath, RevealAudioSlideshow ],
                 margin: 0.05,
@@ -51,7 +52,9 @@
                 progress: false,
                 center: false,
                 transition: 'slide',
-                transitionSpeed: 'fast'
+                transitionSpeed: 'fast',
+                width: 960,
+                height: 700
             });
         </script>
 	</body>
