Updating ilecture2 theme

--- a/_layouts/ilecture2.html
+++ b/_layouts/ilecture2.html
@@ -56,8 +56,8 @@
                 history: true,
                 progress: false,
                 center: false,
-                transition: 'slide',
-                transitionSpeed: 'fast',
+                transition: 'convex',
+                transitionSpeed: 'default',
                 width: 960,
                 height: 700
             });
