Changing fonts for ilecture2

--- a/_layouts/ilecture2.html
+++ b/_layouts/ilecture2.html
@@ -3,6 +3,8 @@
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/reveal-v4.css">
         <link rel="stylesheet" href="/css/ilecture2.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Benne&family=Roboto&display=swap" rel="stylesheet">
 	</head>
 	<body>
         <div class="reveal">
