--- a/css/ilecture2.css
+++ b/css/ilecture2.css
@@ -162,7 +162,8 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   background-color: #FFFFFF; }
 
 .reveal {
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, FreeSerif, serif;
+  font-family: 'Benne', serif;
+  /* font-family: "Palatino Linotype", "Book Antiqua", Palatino, FreeSerif, serif; */
   font-size: 32px;
   font-weight: normal;
   color: #0d0709; }
@@ -193,7 +194,8 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal h6 {
   margin: 0 0 20px 0;
   color: #600f16;
-  font-family: Impact, sans-serif;
+  /* font-family: Impact, sans-serif; */
+  font-family: 'Roboto', sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
