Updating fonts for ilecture2 again

--- a/_layouts/ilecture2.html
+++ b/_layouts/ilecture2.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="/css/reveal-v4.css">
         <link rel="stylesheet" href="/css/ilecture2.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Benne&family=Roboto&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Gentium+Basic:ital,wght@0,400;0,700;1,400&family=Roboto&display=swap" rel="stylesheet">
 	</head>
 	<body>
         <div class="reveal">
