--- a/css/ilecture2.css
+++ b/css/ilecture2.css
@@ -162,8 +162,9 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   background-color: #FFFFFF; }
 
 .reveal {
-  font-family: 'Benne', serif;
+  /* font-family: 'Benne', serif; */
   /* font-family: "Palatino Linotype", "Book Antiqua", Palatino, FreeSerif, serif; */
+  font-family: 'Gentium Basic', serif;
   font-size: 32px;
   font-weight: normal;
   color: #0d0709; }
