Work in progress

--- a/_layouts/ilecture_only.html
+++ b/_layouts/ilecture_only.html
@@ -37,7 +37,7 @@
                 },
                 plugins: [ RevealMath ],
                 margin: 0.05,
-                controls: true,
+                controls: false,
                 keyboard: true,
                 history: true,
                 progress: false,
