Working on CJCS talk.

--- a/css/ilecture2.css
+++ b/css/ilecture2.css
@@ -126,6 +126,9 @@ div.problem:before {
   flex: 1;
   padding: 0 15px; }
 
+.center {
+  text-align: center;
+}
 section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
   color: #fff; }
 
