--- a/css/mtalk.css
+++ b/css/mtalk.css
@@ -184,6 +184,11 @@ div.problem:before {
   text-align: center;
 }
 
+.hidden {
+  opacity: 0;
+  color:#0257B7
+}
+
 section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
   color: #fff; }
 
@@ -389,7 +394,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
 .reveal table td {
   text-align: left;
   padding: 0.2em 0.5em 0.2em 0.5em;
-  border-bottom: 1px solid; }
+  border-bottom: none; }
 
 .reveal table th[align="center"],
 .reveal table td[align="center"] {
